--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,10 @@
 div.folderPopup{
     display: none;
     position: fixed;
-    bottom: 0;
-    right: 15px;
     border: 3px solid #f1f1f1;
     z-index: 9;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
 }
