--- a/src/style.css
+++ b/src/style.css
@@ -3,12 +3,35 @@ div.folders img{
     height: 20px;
 }
 
+div.pageCover {
+    display: none; 
+    position:fixed; 
+    z-index:10; 
+    background-color:rgba(0,0,0,.25); 
+    width:100vw; 
+    height:100vh; 
+    top:0; 
+    left:0;
+  }
 
 div.folderPopup{
+    background-color: white;
     display: none;
     position: fixed;
     border: 3px solid #f1f1f1;
-    z-index: 9;
+    z-index: 100;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+}
+
+div.taskPopup{
+    background-color: white;
+    display: none;
+    position: fixed;
+    border: 3px solid #f1f1f1;
+    z-index: 100;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
