--- a/src/style.css
+++ b/src/style.css
@@ -12,21 +12,9 @@ div.pageCover {
     height:100vh; 
     top:0; 
     left:0;
-  }
-
-div.folderPopup{
-    background-color: white;
-    display: none;
-    position: fixed;
-    border: 3px solid #f1f1f1;
-    z-index: 100;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 50%;
 }
 
-div.taskPopup{
+.popup{
     background-color: white;
     display: none;
     position: fixed;
