--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,27 @@
+*{
+    outline: 1px solid black;
+}
+
+body{
+    display: grid;
+}
+
+div.header{
+    grid-area: 1 / 1 / 2 / 3;
+}
+
+div.sidebar{
+    grid-area: 2 / 1 / 3 / 2;
+}
+
+ul{
+    list-style: none;
+}
+
+div.content{
+    grid-area: 2 / 2 / 3 / 3;
+}
+
 img.icon{
     width: auto;
     height: 20px;
@@ -24,4 +48,12 @@ div.pageCover {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 50%;
+}
+
+div.footer{
+    grid-area: 3 / 1 / 4 / 3;
+}
+
+a{
+    text-decoration: none;
 }
