--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,3 @@
-*{
-    /* outline: 1px solid black; */
-}
-
 body{
     height: 100vh;
     margin: 0;
@@ -74,6 +70,10 @@ div.folders>ul>li>span{
 div.folders>ul>li>img{
     width: auto;
     height: 20px;
+}
+
+div.folders>button{
+    padding: 5px;
 }
 
 div.content{
@@ -236,6 +236,10 @@ div.taskPopup>form>div:nth-child(n+4), div.editTaskPopup>form>div:nth-child(n+4)
     gap: 5px;
 }
 
+div.taskPopup>form>input, div.editTaskPopup>form>input{
+    background-color: rgb(229, 225, 225);
+}
+
 div.taskPopup>form>button, div.editTaskPopup>form>button{
     margin-left: auto;
     margin-right: auto;
@@ -248,6 +252,7 @@ div.taskPopup>form>button:last-child, div.editTaskPopup>form>button:last-child{
 
 textarea{
     resize: none;
+    background-color: rgb(229, 225, 225);
 }
 
 div.footer{
